# cq

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/migrations/: 20240824114104_users.sql  20240824125020_servers.sql
api/src/: main.rs
api/src/handlers/: auth.rs  servers.rs  users.rs
client/: Cargo.toml
client/src/: components.rs  main.rs  plugins.rs
client/src/components/: controllable.rs
client/src/plugins/: api.rs  controller.rs  network.rs  render.rs  ui.rs
engine/: Cargo.toml
engine/src/: api_client.rs  client.rs  components.rs  lib.rs  models.rs  network.rs  resources.rs
engine/src/components/: movement.rs  player.rs
engine/src/models/: api.rs  network.rs
engine/src/models/api/: auth.rs  servers.rs  users.rs
engine/src/models/data/: users.rs
engine/src/plugins/: movement.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/api/: auth.rs  servers.rs  users.rs
models/src/data/: servers.rs  users.rs
models/src/server/: api.rs
server/: Cargo.toml
server-manager/: .taurignore  Trunk.toml  index.html
server-manager/backend/: Cargo.toml  tauri.conf.json
server-manager/backend/src/: main.rs
server-manager/frontend/: Cargo.toml
server-manager/frontend/src/: app.rs
server/src/: api_client.rs  lib.rs  main.rs  plugins.rs  server_api_client.rs  webserver.rs
server/src/plugins/: database.rs  network.rs  webserver.rs
server/src/plugins/database/: models.rs
server/src/plugins/webserver/: app.rs
