[workspace]
resolver = "2"
members = [
  "api",
  "client",
  "engine",
  "server",
  "server-manager/frontend",
  "server-manager/backend",
]

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
bcrypt = "0.15.1"
bevy = "0.14.1"
bevy_quinnet = "0.9.0"
clap = { version = "4.5.16", features = ["derive"] }
josekit = "0.8.7"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.1", features = ["ipnetwork", "time", "uuid"] }
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
