[workspace]
resolver = "2"
members = [
  "api",
  "client",
  "engine",
  "models",
  "server",
  "server-manager/backend",
  "server-manager/frontend",
]

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
bcrypt = "0.15.1"
bevy = { version = "0.14.1", default-features = false }
bevy_ecs = "0.14.1"
bevy_quinnet = "0.9.0"
clap = { version = "4.5.16", features = ["derive"] }
engine = { path = "./engine" }
josekit = "0.8.7"
models = { path = "./models" }
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.1", features = ["ipnetwork", "time", "uuid"] }
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
