[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["default"] }
bevy_egui = "0.29.0"
bevy_quinnet = { workspace = true }
clap = { workspace = true }
engine = { path = "../engine" }
tokio = { workspace = true }
uuid = { workspace = true }
