[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
