[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bcrypt = { workspace = true }
bevy = { workspace = true }
bevy_ecs = { workspace = true }
bevy_quinnet = { workspace = true }
josekit = { workspace = true }
models = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
