[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
bevy = { workspace = true }
bevy_quinnet = { workspace = true }
clap = { workspace = true }
engine = { path = "../engine" }
serde = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-native-tls"] }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
