[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bevy = { workspace = true }
bevy_ecs = { workspace = true }
bevy_quinnet = { workspace = true }
clap = { workspace = true }
engine = { path = "../engine" }
futures = "0.3.30"
models = { path = "../models" }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
