[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
models = { path = "../../models" }
uuid = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
